doc: update instructions